[package]
name = "xdevs_utils"
version = "0.1.0"
authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
edition = "2021"
description = "Utility models and tools for the xDEVS simulator."
readme = "README.md"
repository = "https://github.com/iscar-ucm/xdevs_utils.rs"
license = "LGPL-3.0-or-later"
keywords = ["DEVS", "modeling", "simulation"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdevs = "0.3"
